csbind/joltc_bindgen.cs


        [DllImport(__DllName, EntryPoint = "JPH_MutableCompoundShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_MutableCompoundShapeSettings* JPH_MutableCompoundShapeSettings_Create();

        [DllImport(__DllName, EntryPoint = "JPH_MutableCompoundShape_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_MutableCompoundShape* JPH_MutableCompoundShape_Create(JPH_MutableCompoundShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_MutableCompoundShape_AddShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_MutableCompoundShape_AddShape(JPH_MutableCompoundShape* shape, JPH_Vec3* position, JPH_Quat* rotation, JPH_Shape* child, uint userData);

        [DllImport(__DllName, EntryPoint = "JPH_MutableCompoundShape_RemoveShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_MutableCompoundShape_RemoveShape(JPH_MutableCompoundShape* shape, uint index);

        [DllImport(__DllName, EntryPoint = "JPH_MutableCompoundShape_ModifyShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_MutableCompoundShape_ModifyShape(JPH_MutableCompoundShape* shape, uint index, JPH_Vec3* position, JPH_Quat* rotation);

        [DllImport(__DllName, EntryPoint = "JPH_MutableCompoundShape_ModifyShape2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_MutableCompoundShape_ModifyShape2(JPH_MutableCompoundShape* shape, uint index, JPH_Vec3* position, JPH_Quat* rotation, JPH_Shape* newShape);

        [DllImport(__DllName, EntryPoint = "JPH_MutableCompoundShape_AdjustCenterOfMass", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_MutableCompoundShape_AdjustCenterOfMass(JPH_MutableCompoundShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_DecoratedShape_GetInnerShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_Shape* JPH_DecoratedShape_GetInnerShape(JPH_DecoratedShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_RotatedTranslatedShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_RotatedTranslatedShapeSettings* JPH_RotatedTranslatedShapeSettings_Create(JPH_Vec3* position, JPH_Quat* rotation, JPH_ShapeSettings* shapeSettings);

        [DllImport(__DllName, EntryPoint = "JPH_RotatedTranslatedShapeSettings_Create2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_RotatedTranslatedShapeSettings* JPH_RotatedTranslatedShapeSettings_Create2(JPH_Vec3* position, JPH_Quat* rotation, JPH_Shape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_RotatedTranslatedShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_RotatedTranslatedShape* JPH_RotatedTranslatedShapeSettings_CreateShape(JPH_RotatedTranslatedShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_RotatedTranslatedShape_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_RotatedTranslatedShape* JPH_RotatedTranslatedShape_Create(JPH_Vec3* position, JPH_Quat* rotation, JPH_Shape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_RotatedTranslatedShape_GetPosition", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_RotatedTranslatedShape_GetPosition(JPH_RotatedTranslatedShape* shape, JPH_Vec3* position);

        [DllImport(__DllName, EntryPoint = "JPH_RotatedTranslatedShape_GetRotation", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_RotatedTranslatedShape_GetRotation(JPH_RotatedTranslatedShape* shape, JPH_Quat* rotation);

        [DllImport(__DllName, EntryPoint = "JPH_ScaledShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_ScaledShapeSettings* JPH_ScaledShapeSettings_Create(JPH_ShapeSettings* shapeSettings, JPH_Vec3* scale);

        [DllImport(__DllName, EntryPoint = "JPH_ScaledShapeSettings_Create2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_ScaledShapeSettings* JPH_ScaledShapeSettings_Create2(JPH_Shape* shape, JPH_Vec3* scale);

        [DllImport(__DllName, EntryPoint = "JPH_ScaledShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_ScaledShape* JPH_ScaledShapeSettings_CreateShape(JPH_ScaledShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_ScaledShape_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_ScaledShape* JPH_ScaledShape_Create(JPH_Shape* shape, JPH_Vec3* scale);

        [DllImport(__DllName, EntryPoint = "JPH_ScaledShape_GetScale", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_ScaledShape_GetScale(JPH_ScaledShape* shape, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_OffsetCenterOfMassShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_OffsetCenterOfMassShapeSettings* JPH_OffsetCenterOfMassShapeSettings_Create(JPH_Vec3* offset, JPH_ShapeSettings* shapeSettings);

        [DllImport(__DllName, EntryPoint = "JPH_OffsetCenterOfMassShapeSettings_Create2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_OffsetCenterOfMassShapeSettings* JPH_OffsetCenterOfMassShapeSettings_Create2(JPH_Vec3* offset, JPH_Shape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_OffsetCenterOfMassShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_OffsetCenterOfMassShape* JPH_OffsetCenterOfMassShapeSettings_CreateShape(JPH_OffsetCenterOfMassShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_OffsetCenterOfMassShape_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_OffsetCenterOfMassShape* JPH_OffsetCenterOfMassShape_Create(JPH_Vec3* offset, JPH_Shape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_OffsetCenterOfMassShape_GetOffset", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_OffsetCenterOfMassShape_GetOffset(JPH_OffsetCenterOfMassShape* shape, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_EmptyShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_EmptyShapeSettings* JPH_EmptyShapeSettings_Create(JPH_Vec3* centerOfMass);

        [DllImport(__DllName, EntryPoint = "JPH_EmptyShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_EmptyShape* JPH_EmptyShapeSettings_CreateShape(JPH_EmptyShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_BodyCreationSettings* JPH_BodyCreationSettings_Create();

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_Create2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_BodyCreationSettings* JPH_BodyCreationSettings_Create2(JPH_ShapeSettings* settings, JPH_Vec3* position, JPH_Quat* rotation, uint motionType, ushort objectLayer);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_Create3", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_BodyCreationSettings* JPH_BodyCreationSettings_Create3(JPH_Shape* shape, JPH_Vec3* position, JPH_Quat* rotation, uint motionType, ushort objectLayer);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_Destroy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_BodyCreationSettings_Destroy(JPH_BodyCreationSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_GetPosition", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_BodyCreationSettings_GetPosition(JPH_BodyCreationSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_SetPosition", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_BodyCreationSettings_SetPosition(JPH_BodyCreationSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_GetRotation", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_BodyCreationSettings_GetRotation(JPH_BodyCreationSettings* settings, JPH_Quat* result);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_SetRotation", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_BodyCreationSettings_SetRotation(JPH_BodyCreationSettings* settings, JPH_Quat* value);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_GetLinearVelocity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_BodyCreationSettings_GetLinearVelocity(JPH_BodyCreationSettings* settings, JPH_Vec3* velocity);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_SetLinearVelocity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_BodyCreationSettings_SetLinearVelocity(JPH_BodyCreationSettings* settings, JPH_Vec3* velocity);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_GetAngularVelocity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_BodyCreationSettings_GetAngularVelocity(JPH_BodyCreationSettings* settings, JPH_Vec3* velocity);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_SetAngularVelocity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_BodyCreationSettings_SetAngularVelocity(JPH_BodyCreationSettings* settings, JPH_Vec3* velocity);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_GetMotionType", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_BodyCreationSettings_GetMotionType(JPH_BodyCreationSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_SetMotionType", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_BodyCreationSettings_SetMotionType(JPH_BodyCreationSettings* settings, uint value);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_GetAllowedDOFs", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_BodyCreationSettings_GetAllowedDOFs(JPH_BodyCreationSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_BodyCreationSettings_SetAllowedDOFs", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_BodyCreationSettings_SetAllowedDOFs(JPH_BodyCreationSettings* settings, uint value);
